# KFrame

./: .gitignore  CMakeLists.txt  Frame.sln  README.md  ToDoList.txt  _copy_frame.bat  _update_frame.bat
1.Server/1.Frame/: CMakeLists.txt  Frame.sln  frame-release.bat  release - 副本.bat  release.bat
2.Midware/1.Server/: CMakeLists.txt  Midware.sln  frame-update.bat  frame.bat
KFPlugin/: CMakeLists.txt
KFPlugin/KFAccount/: CMakeLists.txt  KFAccount.vcxproj  KFAccount.vcxproj.filters  KFAccountInterface.h  KFAccountLogic.cpp  KFAccountLogic.hpp  KFAccountModule.cpp  KFAccountModule.hpp  KFAccountMongo.cpp  KFAccountMongo.hpp  KFAccountPlugin.cpp  KFAccountPlugin.hpp  KFAccountRedis.cpp  KFAccountRedis.hpp  dllmain.cpp
KFPlugin/KFAchieve/: CMakeLists.txt  KFAchieve.vcxproj  KFAchieve.vcxproj.filters  KFAchieveConfig.cpp  KFAchieveConfig.hpp  KFAchieveModule.cpp  KFAchieveModule.hpp  KFAchievePlugin.cpp  KFAchievePlugin.hpp  dllmain.cpp
KFPlugin/KFActivity/: CMakeLists.txt  KFActivity.vcxproj  KFActivityConfig.cpp  KFActivityConfig.hpp  KFActivityInterface.h  KFActivityModule.cpp  KFActivityModule.hpp  KFActivityPlugin.cpp  KFActivityPlugin.hpp  dllmain.cpp
KFPlugin/KFAttribute/: CMakeLists.txt  KFAttribute.vcxproj  KFAttributeModule.cpp  KFAttributeModule.hpp  KFAttributePlugin.cpp
KFPlugin/KFAuth/: CMakeLists.txt  KFAuth.vcxproj  KFAuthInterface.h  KFAuthModule.cpp  KFAuthModule.hpp  KFAuthPlugin.cpp  KFAuthPlugin.hpp  dllmain.cpp
KFPlugin/KFBasicAttribute/: CMakeLists.txt  KFBasicAttribute.vcxproj  KFBasicAttribute.vcxproj.filters  KFBasicAttributeInterface.h  KFBasicAttributeLogic.cpp  KFBasicAttributeLogic.hpp  KFBasicAttributeModule.cpp  KFBasicAttributeModule.hpp  KFBasicAttributeMongo.cpp  KFBasicAttributeMongo.hpp  KFBasicAttributePlugin.cpp  KFBasicAttributePlugin.hpp  KFBasicAttributeRedis.cpp  KFBasicAttributeRedis.hpp  dllmain.cpp
KFPlugin/KFBasicClient/: CMakeLists.txt  KFBasicClient.vcxproj  KFBasicClient.vcxproj.filters  KFBasicClientInterface.h  KFBasicClientModule.cpp  KFBasicClientModule.hpp  KFBasicClientPlugin.cpp  KFBasicClientPlugin.hpp  dllmain.cpp
KFPlugin/KFBasicDatabase/: CMakeLists.txt  KFBasicDatabase.vcxproj  KFBasicDatabase.vcxproj.filters  KFBasicDatabaseInterface.h  KFBasicDatabaseLogic.cpp  KFBasicDatabaseLogic.hpp  KFBasicDatabaseModule.cpp  KFBasicDatabaseModule.hpp  KFBasicDatabaseMongo.cpp  KFBasicDatabaseMongo.hpp  KFBasicDatabasePlugin.cpp  KFBasicDatabasePlugin.hpp  KFBasicDatabaseRedis.cpp  KFBasicDatabaseRedis.hpp  dllmain.cpp
KFPlugin/KFBasicShard/: CMakeLists.txt  KFBasicShard.vcxproj  KFBasicShard.vcxproj.filters  KFBasicShardInterface.h  KFBasicShardModule.cpp  KFBasicShardModule.hpp  KFBasicShardPlugin.cpp  KFBasicShardPlugin.hpp  dllmain.cpp
KFPlugin/KFBus/: CMakeLists.txt  KFBus.vcxproj  KFBus.vcxproj.filters  KFBusConfig.cpp  KFBusConfig.hpp  KFBusInterface.h  KFBusModule.cpp  KFBusModule.hpp  KFBusPlugin.cpp  KFBusPlugin.hpp  dllmain.cpp
KFPlugin/KFChannel/: CMakeLists.txt  KFChannel.cpp  KFChannel.hpp  KFChannel.vcxproj  KFChannel.vcxproj.filters  KFChannelConfig.cpp  KFChannelConfig.hpp  KFChannelInterface.h  KFChannelModule.cpp  KFChannelModule.hpp  KFChannelPlugin.cpp  KFChannelPlugin.hpp  KFInternal.cpp  KFInternal.hpp  KFSteam.cpp  KFSteam.hpp  KFWeiXin.cpp  KFWeiXin.hpp  dllmain.cpp
KFPlugin/KFChat/: CMakeLists.txt  KFChat.vcxproj  KFChat.vcxproj.filters  KFChatInterface.h  KFChatModule.cpp  KFChatModule.hpp  KFChatPlugin.cpp  KFChatPlugin.hpp  dllmain.cpp
KFPlugin/KFClusterClient/: CMakeLists.txt  KFClusterClient.vcxproj  KFClusterClient.vcxproj.filters  KFClusterClientInterface.h  KFClusterClientModule.cpp  KFClusterClientModule.hpp  KFClusterClientPlugin.cpp  KFClusterClientPlugin.hpp  dllmain.cpp
KFPlugin/KFClusterMaster/: CMakeLists.txt  KFClusterMaster.vcxproj  KFClusterMasterInterface.h  KFClusterMasterModule.cpp  KFClusterMasterModule.hpp  KFClusterMasterPlugin.cpp  KFClusterMasterPlugin.hpp  dllmain.cpp
KFPlugin/KFClusterProxy/: CMakeLists.txt  KFClusterProxy.vcxproj  KFClusterProxyInterface.h  KFClusterProxyModule.cpp  KFClusterProxyModule.hpp  KFClusterProxyPlugin.cpp  dllmain.cpp
KFPlugin/KFClusterShard/: CMakeLists.txt  KFClusterShard.vcxproj  KFClusterShardInterface.h  KFClusterShardModule.cpp  KFClusterShardModule.hpp  KFClusterShardPlugin.cpp  dllmain.cpp
KFPlugin/KFCommand/: CMakeLists.txt  KFCommand.vcxproj  KFCommand.vcxproj.filters  KFCommandInterface.h  KFCommandModule.cpp  KFCommandModule.hpp  KFCommandPlugin.cpp  dllmain.cpp
KFPlugin/KFCompound/: CMakeLists.txt  KFCompound.vcxproj  KFCompound.vcxproj.filters  KFCompoundConfig.cpp  KFCompoundConfig.hpp  KFCompoundModule.cpp  KFCompoundModule.hpp  KFCompoundPlugin.cpp  KFCompoundPlugin.hpp  dllmain.cpp
KFPlugin/KFCondition/: CMakeLists.txt  KFCondition.vcxproj  KFCondition.vcxproj.filters  KFConditionConfig.cpp  KFConditionConfig.hpp  KFConditionInterface.h  KFConditionModule.cpp  KFConditionModule.hpp  KFConditionPlugin.cpp  KFConditionPlugin.hpp  dllmain.cpp
KFPlugin/KFConfig/: CMakeLists.txt  KFAchieveConfig.hpp  KFChannelConfig.hpp  KFCompoundConfig.hpp  KFConditionConfig.hpp  KFConditionDefineConfig.hpp  KFConfig.vcxproj  KFConfig.vcxproj.filters  KFConfigConfig.cpp  KFConfigConfig.hpp  KFConfigInterface.h  KFConfigModule.cpp  KFConfigModule.hpp  KFConfigPlugin.cpp  KFConstantConfig.hpp  KFCountCostConfig.h  KFEnterConfig.hpp  KFExecuteConfig.hpp  KFFilterConfig.hpp  KFFormulaConfig.h  KFGiftConfig.hpp  KFGoodsConfig.hpp  KFItemBagConfig.hpp  KFItemConfig.hpp  KFItemTypeConfig.hpp  KFLeaveConfig.hpp  KFLoaderConfig.hpp  KFMailConfig.hpp  KFPayConfig.hpp  KFPlayerConfig.hpp  KFRankConfig.hpp  KFRelationConfig.hpp  KFResetConfig.hpp  KFRouteConfig.hpp  KFSignConfig.hpp  KFStoreConfig.hpp  KFTaskChainConfig.hpp  KFTaskConfig.hpp  KFTeamConfig.hpp  KFTemplateConfig.hpp  (+9 more)
KFPlugin/KFDataClient/: CMakeLists.txt  KFDataClient.vcxproj  KFDataClientInterface.h  KFDataClientModule.cpp  KFDataClientModule.hpp  KFDataClientPlugin.cpp  dllmain.cpp
KFPlugin/KFDataShard/: CMakeLists.txt  KFDataExecute.cpp  KFDataExecute.hpp  (+10 more)
(+6903 files in other folders)
