set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -rdynamic -shared")

message("${CMAKE_CXX_FLAGS}")
macro(LINK_SDK_MACRO project_name)

    if(CMAKE_BUILD_TYPE MATCHES "Debug") 
        target_link_libraries(${project_name} KFGlobald KFPlugind KFMemoryd KFProtocold KFHttpd KFCored KFConHashd KFNetworkd KFUtilityd KFMath3Dd PocoNetd PocoNetSSLd PocoCryptod PocoJSONd PocoUtild PocoFoundationd PocoXMLd PocoDataMySQLd PocoDatad z dl jsoncpp ssl crypto pthread uv luaplus53d iconv protobuf hiredis mysqlclient ftp)
    else()
        target_link_libraries(${project_name} KFGlobal KFPlugin KFMemory KFProtocol KFHttp KFCore KFConHash KFNetwork KFUtility KFMath3D PocoNet PocoNetSSL PocoCrypto PocoJSON PocoUtil PocoFoundation PocoXML PocoDataMySQL PocoData z dl jsoncpp ssl crypto pthread uv luaplus53 iconv protobuf hiredis mysqlclient ftp)  
    endif()

endmacro(LINK_SDK_MACRO project_name)

macro(BUILD_PLUGIN_MACRO project_name)
    aux_source_directory(. KF_SRC)
    add_library(${project_name} SHARED ${KF_SRC})
    add_dependencies(${project_name} KFConHash)
    add_dependencies(${project_name} KFCore)
    add_dependencies(${project_name} KFHttp)
    add_dependencies(${project_name} KFGlobal)
    add_dependencies(${project_name} KFMath3D)
    add_dependencies(${project_name} KFMemory)
    add_dependencies(${project_name} KFNetwork)
    add_dependencies(${project_name} KFPlugin)
    add_dependencies(${project_name} KFProtocol)
    add_dependencies(${project_name} KFUtility)

    set_target_properties(${project_name} PROPERTIES PREFIX "")
    set_target_properties(${project_name} PROPERTIES OUTPUT_NAME_DEBUG "${project_name}d")
    set_target_properties(${project_name} PROPERTIES
        FOLDER "KFPlugin"
        ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR}
        RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
        LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR})

LINK_SDK_MACRO(${project_name})
endmacro(BUILD_PLUGIN_MACRO project_name)



add_subdirectory(KFAchieve)
add_subdirectory(KFActivity)
add_subdirectory(KFAttribute)
add_subdirectory(KFAuth)
add_subdirectory(KFBattleMaster)
add_subdirectory(KFBattleClient)
add_subdirectory(KFBattleProxy)
add_subdirectory(KFBattleShard)
add_subdirectory(KFBus)
add_subdirectory(KFChannel)
add_subdirectory(KFChat)
add_subdirectory(KFClothes)
add_subdirectory(KFClusterClient)
add_subdirectory(KFClusterProxy)
add_subdirectory(KFClusterMaster)
add_subdirectory(KFClusterShard)
add_subdirectory(KFConfig)
add_subdirectory(KFCompound)
add_subdirectory(KFDataClient)
add_subdirectory(KFDataProxy)
add_subdirectory(KFDataShard)
add_subdirectory(KFDebug)
add_subdirectory(KFDeployAgent)
add_subdirectory(KFDeployServer)
add_subdirectory(KFDeployClient)
add_subdirectory(KFDeployCommand)
add_subdirectory(KFDeployUpload)
add_subdirectory(KFDirClient)
add_subdirectory(KFDirProxy)
add_subdirectory(KFDirShard)
add_subdirectory(KFDisplay)
add_subdirectory(KFEnter)
add_subdirectory(KFFilter)
add_subdirectory(KFGame)
add_subdirectory(KFGate)
add_subdirectory(KFGift)
add_subdirectory(KFGroupClient)
add_subdirectory(KFGroupProxy)
add_subdirectory(KFGroupShard)
#add_subdirectory(KFGuildClient)
#add_subdirectory(KFGuildProxy)
#add_subdirectory(KFGuildShard)
add_subdirectory(KFHttpClient)
add_subdirectory(KFHttpServer)
add_subdirectory(KFIpAddress)
add_subdirectory(KFItem)
add_subdirectory(KFFtp)
add_subdirectory(KFKernel)
add_subdirectory(KFLogin)
add_subdirectory(KFLua)
add_subdirectory(KFLeave)
add_subdirectory(KFMailClient)
add_subdirectory(KFMailProxy)
add_subdirectory(KFMailShard)
add_subdirectory(KFMailMaster)
add_subdirectory(KFMatchClient)
add_subdirectory(KFMatchProxy)
add_subdirectory(KFMatchShard)
add_subdirectory(KFMessage)
add_subdirectory(KFMySQL)
add_subdirectory(KFOption)
add_subdirectory(KFPlatform)
add_subdirectory(KFPlayer)
add_subdirectory(KFPublicClient)
add_subdirectory(KFPublicProxy)
add_subdirectory(KFPublicShard)
add_subdirectory(KFRankClient)
add_subdirectory(KFRankProxy)
add_subdirectory(KFRankShard)
add_subdirectory(KFReset)
add_subdirectory(KFRedis)
add_subdirectory(KFRouteClient)
add_subdirectory(KFRouteProxy)
add_subdirectory(KFRouteShard)
add_subdirectory(KFRelationClient)
add_subdirectory(KFRelationProxy)
add_subdirectory(KFRelationShard)
add_subdirectory(KFSchedule)
add_subdirectory(KFSignIn)
add_subdirectory(KFStore)
add_subdirectory(KFTask)
add_subdirectory(KFTcpClient)
add_subdirectory(KFTcpServer)
add_subdirectory(KFTimer)
add_subdirectory(KFWorker)
add_subdirectory(KFWorld)
add_subdirectory(KFZone)
add_subdirectory(KFLogClient)
add_subdirectory(KFLogProxy)
add_subdirectory(KFLogShard)
add_subdirectory(KFSteam)